# zero2prod

./: Cargo.toml  Dockerfile  LICENSE  spec.yaml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs
src/domain/: subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
