[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Antonio Pardo <apardo@spluca.org>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
config = "0.11"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = ["v4"] }
log = "0.4.16"
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
reqwest = "0.11.10"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"
serde-aux = "3.0.1"

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
once_cell = "1.10.0"
